# KIO-VTF-Thumb-Creator

./: .gitignore  CMakeLists.txt  README.md  VTFThumbCreator.spec  build_and_install.sh  vtfthumbcreator.desktop
.github/: pull.yml
install/: x-vtf.xml
src/: VTFThumbCreator.cpp  VTFThumbCreator.h
